--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
@@ -15,6 +17,8 @@
     "koa-router": "^8.0.8",
     "koa-session": "^5.13.1",
     "koa-static": "^5.0.0",
+    "mocha": "^7.1.1",
+    "nock": "^12.0.3",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -26,7 +30,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npm run test:client && npm run test:backend:unit && npm run test:backend:integration",
+    "test:client": "react-scripts test",
+    "test:backend:unit": "mocha --recursive test/unit",
+    "test:backend:integration": "mocha --recursive test/integration",
     "eject": "react-scripts eject",
     "start:backend": "nodemon src/server/server.js"
   },
